--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,61 @@
 /* You can add global styles to this file, and also import other style files */
+@import 'primeng/resources/themes/bootstrap4-dark-blue/theme.css';
+@import 'primeng/resources/primeng.min.css';
+@import 'primeicons/primeicons.css';
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    font-family: 'Roboto', sans-serif;
+}
+
+html {
+    height: 100vh;
+}
+.body {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+.card {
+    // padding: 1rem;
+    border-radius: 10px;
+    margin-bottom: 1rem;
+}
+
+.flex {
+    display: flex;
+    justify-content: center;
+    padding-bottom: 10px;
+}
+
+.columnFlex {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.flexRow {
+    display: flex;
+}
+
+:root {
+    .p-fileupload-buttonbar {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .p-fileupload-row > div {
+        width: fit-content;
+    }
+
+    .toolbar > p-button .p-button{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        margin: 5px 0;
+    }
+}
